# weaviate-test-reporter

./: .gitignore  CLAUDE.md  LICENSE  README.md
.github/workflows/: action-smoke.yml  frontend-image.yml  frontend.yml  integration-tests.yml  lint.yml  unit-tests.yml
action/: .gitignore  action.yml  local-test.sh  pyproject.toml  requirements-dev.txt  requirements.txt
action/scripts/: backfill_descriptions.py  ingest_local.py  seed_local.py
action/src/weaviate_test_reporter/: __init__.py  __main__.py  config.py  github_meta.py  ingest.py  logging.py  parser.py  schema.py  vectorization.py
action/tests/integration/: conftest.py  test_e2e.py
action/tests/unit/: test_config.py  test_github_meta.py  test_ingest.py  test_logging.py  test_main.py  test_parser.py  test_schema.py
action/tests/unit/fixtures/: gotestsum.xml  jest.xml  no_count_attributes.xml  pytest_realistic.xml  pytest_simple.xml  surefire.xml  surefire_rerun_edge.xml  surefire_reruns.xml  timestamped_counts.xml
frontend/: .dockerignore  .gitignore  Dockerfile  next.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AgentChat.tsx  AgentMessage.tsx  BrandMark.tsx  CacheHint.tsx  EmptyState.tsx  ExecutedDrops.tsx  FailureClusters.tsx  MultiSelectFilter.tsx  NewRegressions.tsx  PageHeader.tsx  RunFilterBar.tsx  Sidebar.tsx  States.tsx  StatusBadge.tsx  TestHistoryView.tsx  TrendCharts.tsx  TrendFilterBar.tsx
frontend/e2e/: agent.spec.ts  attempts.spec.ts  dashboard.spec.ts  filtering.spec.ts  (+5 more)
(+35 files in other folders)
