[project]
name = "weaviate-test-reporter"
version = "0.1.0"
description = "Parse JUnit XML and ingest test results into Weaviate."
requires-python = ">=3.11"
license = { text = "BSD-3-Clause" }

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --strict-markers"
pythonpath = ["src"]
markers = [
    "integration: requires a running Weaviate instance",
]
